# VortexDL

./: .gitignore  Cargo.toml  README.md  build.rs  devbox.json  dist-workspace.toml  plan-dist-manifest.json  start.sh
.github/workflows/: release.yml
frontend/: README.md  angular.json  package.json  tsconfig.json
frontend/.angular/cache/21.2.7/voltexdl/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
frontend/.angular/cache/21.2.7/voltexdl/vite/: com.chrome.devtools.json
frontend/src/: env.d.ts  index.html  main.ts  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/pages/dashboard-view/: dashboard-view.ts
frontend/src/app/pages/music-tracks-view/: music-tracks-view.html  music-tracks-view.scss  music-tracks-view.service.ts  music-tracks-view.state.ts  music-tracks-view.ts
frontend/src/app/pages/music-tracks-view/music-card/: music-card.html  music-card.scss  music-card.ts
frontend/src/app/pages/music-tracks-view/music-detail-modal/: music-detail-modal.html  (+2 more)
frontend/src/app/pages/playlist-view/: playlist-view.service.ts  playlist-view.ts
frontend/src/app/services/: download-tracking.service.ts  notification.service.ts
frontend/src/shared/components/active-downloads/: active-downloads.html  active-downloads.scss  active-downloads.ts
frontend/src/shared/components/download-progress-snackbar/: download-progress-snackbar.html  download-progress-snackbar.scss  download-progress-snackbar.ts
frontend/src/shared/components/header/: header.html  header.scss  header.ts  header.types.ts
frontend/src/shared/components/logo/: logo.html  logo.scss  logo.ts
frontend/src/shared/components/sidebar/: sidebar.html  sidebar.navigation.ts  sidebar.scss  sidebar.ts
frontend/src/shared/interceptors/: api.interceptor.ts
frontend/src/shared/validators/: url.validator.ts
src/: api.rs  cli.rs  config.rs  downloader.rs  main.rs  models.rs  storage.rs  utils.rs
src/api/: download_manager.rs  errors.rs  mod.rs  models.rs  routes.rs  state.rs  static_files.rs
src/api/api/: download.rs  tracks.rs
src/api/handlers/: download.rs  health.rs  mod.rs  tracks.rs
src/downloader/: core.rs  dispatcher.rs  likes.rs  mod.rs  playlist.rs  track.rs  utils.rs
src/utils/: audio_file_manipulator.rs  metadata.rs  soundcloud.rs
(+9 files in other folders)
