[package]
name = "VortexLD"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/IVKLD/VortexDL"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"], default-features = false }
futures = "0.3.28"
dirs = "6.0.0"
eyre = "0.6.12"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = [
    "rustls-tls",
], default-features = false }
base64 = "0.22.1"
rand = "0.9.1"
url = { version = "2.5.4", features = ["serde"] }
mimalloc = "0.1.48"
soundcloud-rs = { version = "0.14.0", path = "../soundcloud-rs" }
colored = "3.1.1"
indicatif = "0.18.4"
id3 = "1.16.4"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
