[package]
name = "vortex-dl"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/IVKLD/VortexDL"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"], default-features = false }
futures = "0.3.28"
clap = { version = "4.5.41", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
mimalloc = "0.1.48"
soundcloud-rs = { version = "0.14.0", git = "https://github.com/IVKLD/soundcloud-rs.git" }
colored = "3.1.1"
indicatif = "0.18.4"
id3 = "1.16.4"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
